# jonreeve.com

./: .ghcid  .gitignore  .gitmodules  .netlify.toml  .travis.yml  2015-05-10-macroetymology-of-portrait-paper.markdown  404.md  Gemfile  Makefile  README.md  README.org  Readme.md  _config.yml  about.md  categories.html  cv.html  cv.md  default.nix  dev.json  feed.xml  flake.nix  hie.yaml  index.html  joereeve.cabal  jonreeve-com.cabal  jonreevecom.cabal  jonv2.cabal  metalsmith.json  node-packages.nix  package-lock.json  package.json  params.json  shell.nix  tags.html
.github/workflows/: main.yml  publish.yaml
.sass-cache/1f663bea91668d32882665f247f4c8bf9fad83bc/: _base.scssc  _layout.scssc  _syntax-highlighting.scssc
.sass-cache/f66acdd3eb7b1191de765a414fda1f423218b597/: _base.scssc  _layout.scssc  _syntax-highlighting.scssc
_data/: cv.md  cv.yaml
_drafts/: 2014-10-09-vim-all-the-things.markdown  2014-10-15-convert-CSS-units-in-vim.markdown  2014-11-18-a-literary-chiaroscuro-detector.markdown  2014-12-18-detecting-literary-chiaroscuro.markdown  2015-03-15-proposal-for-a-corpus-protocol.markdown  2015-04-25-corpus-sharing-protocol-update.markdown  2017-03-17-ulysses-characters.md
_includes/: disqus_comments.html  footer.html  head.html  scripts.html
_layouts/: page.html  post.html
_posts/: 2012-09-29-my-awesome-notetaking-system-2.markdown  2013-04-19-virginia-woolfs-the-waves-a-tei-edition.markdown  2013-04-22-how-i-automated-my-weekly-response-papers.markdown  2013-05-10-announcing-annotags.markdown  2013-05-10-announcing-annotweet-a-concept-for-a-decentralized-literary-annotation-protocol.markdown  2013-06-05-etexts-and-distractions.markdown  2013-11-01-introducing-the-macro-etymological-analyzer.markdown  2013-11-02-workshop-proposal-vim-for-humanists.markdown  2014-06-09-hacking-at-the-open-syllabus-project-collocations-by-subject.markdown  2014-09-05-welcome-to-jekyll.markdown  2014-09-14-macroetymology-of-whitman-editions.markdown  2014-09-20-macroetymology-of-portrait.markdown  2014-09-22-sketch-for-a-meta-programming-language.markdown  2014-09-28-annotag-calculator.markdown  2014-10-21-macroetymology-of-the-waves.markdown  2014-10-25-proposal-for-improved-book-covers.markdown  2015-03-02-detecting-literary-chiaroscuro.markdown  2015-03-12-imperial-voices.markdown  2015-03-15-proposal-for-a-corpus-protocol.markdown  2015-04-25-a-bookmarklet-for-creating-annotags.markdown  2015-05-10-macroetymology-of-portrait-paper.markdown  2015-09-08-introducing-git-lit.markdown  2015-12-30-non-linear-garden-party.markdown  2016-01-03-cantos-generator.markdown  2016-01-25-non-linear-garden-party.markdown  2016-02-03-cantos-generator.markdown  2016-06-01-introducing-macroetym-cli.markdown  2016-07-12-paradise-lost-macroetymology.markdown  2016-08-23-chapterize.markdown  2016-10-08-socratic-dialogue-generator.markdown  2017-01-04-character-voice.md  2017-06-06-macro-etymological-canterbury-tales.md  2017-06-07-henry-james-sentence.md  2017-06-23-project-gutenberg-the-database.md  2017-12-05-similar-documents-in-project-gutenberg.md  2018-03-07-fingerprinting-the-chapter.markdown
_sass/: _base.scss  _layout.scss  _post.scss  _style.scss
_site/: cv.md  feed.xml  index.html
_site/about/: index.html
_site/announcing-annotweet-a-concept-for-a-decentralized-literary-annotation-protocol/: index.html
_site/categories/: index.html
_site/cv/: index.html
_site/etexts-and-distractions/: index.html
_site/hacking-at-the-open-syllabus-project-collocations-by-subject/: index.html
_site/introducing-the-macro-etymological-analyzer/: index.html
_site/page2/: index.html
_site/sample-page/: index.html
_site/tags/: index.html
art/: index.md  postcards.md  royandmargarine.md
assets/css/: post.css  style.sass
assets/js/: annotag-bookmarklet.js  annotag-calculator.js  annotag-tweetme.js
content/: 404.md  bibliography.bib  index.md
content/posts/: 2013-05-10-announcing-annotags.md  2013-05-10-announcing-annotags.org  2013-11-01-introducing-the-macro-etymological-analyzer.md  2013-11-01-introducing-the-macro-etymological-analyzer.org  2014-06-09-hacking-at-the-open-syllabus-project-collocations-by-subject.md  2014-06-09-hacking-at-the-open-syllabus-project-collocations-by-subject.org  2014-09-14-macroetymology-of-whitman-editions.md  2014-09-14-macroetymology-of-whitman-editions.org  2014-09-28-annotag-calculator.md  2014-09-28-annotag-calculator.org  2014-10-21-macroetymology-of-the-waves.md  2014-10-21-macroetymology-of-the-waves.org  2015-03-02-detecting-literary-chiaroscuro.md  2015-03-02-detecting-literary-chiaroscuro.org  2015-03-12-imperial-voices.md  2015-03-12-imperial-voices.org  2015-03-15-proposal-for-a-corpus-protocol.md  2015-03-15-proposal-for-a-corpus-protocol.org  2015-04-25-a-bookmarklet-for-creating-annotags.md  2015-04-25-a-bookmarklet-for-creating-annotags.org  2015-05-10-macroetymology-of-portrait-paper.md  2015-05-10-macroetymology-of-portrait-paper.org  2015-09-08-introducing-git-lit.md  2015-09-08-introducing-git-lit.org  2016-01-25-non-linear-garden-party.md  2016-01-25-non-linear-garden-party.org  2016-02-03-cantos-generator.md  2016-02-03-cantos-generator.org  2016-06-01-introducing-macroetym-cli.md  2016-06-01-introducing-macroetym-cli.org  2016-07-12-paradise-lost-macroetymology.md  2016-07-12-paradise-lost-macroetymology.org  2016-08-23-chapterize.md  2016-08-23-chapterize.org  2016-10-08-socratic-dialogue-generator.md  2016-10-08-socratic-dialogue-generator.org  2017-01-04-character-voice.md  2017-01-04-character-voice.org  2017-06-06-macro-etymological-canterbury-tales.md  2017-06-06-macro-etymological-canterbury-tales.org  (+29 more)
css/: main.scss
cv/: index.html
layouts/: cv.pug  index.pug  normal.pug  page.pug  post.pug  resume.pug  tag.pug  tags.pug
presentations/cbad/: cbad-pres.md  cbad-pres.md~  default.revealjs  index.html
sample-page/: index.markdown
src/: 404.md  CSS.hs  CV.hs  Main.hs  OldMain.hs  Pandoc.hs  RSS.hs  SiteData.hs  cv.hs  cv.md  cv.yaml  index.md  resume.md  shell.nix  site.yaml  tags.md
tags/: index.html
(+265 files in other folders)
