cabal-version: 2.4
name: jonreevecom
version: 3.0.0.0
license: BSD-3-Clause
maintainer: jonathan@jonreeve.com
author: Jonathan Reeve
category: Web

executable jonreevecom
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
    other-modules:
        CSS
        Pandoc
        CV
        CV.Projects
        CV.Shared
        CV.Teaching
        CV.Other
        RSS
        SiteData
    build-depends:
        aeson,
        base,
        base-compat,
        clay,
        containers,
        feed,
        filepath,
        lucid,
        mtl,
        pandoc,
        pandoc-types,
        path,
        PyF,
        relude,
        rib,
        rib-core,
        shake,
        text,
        with-utf8,
        xml-conduit,
        xml-types,
