cabal-version:      2.4
name:               jonreevecom
version:            4.0.0.0
license:            CC-BY-NC-SA-4.0
copyright:          2021 Jonathan Reeve
maintainer:         jonathan@jonreeve.com
author:             Jonathan Reeve
category:           Web

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

executable jonv2
  build-depends:
    , aeson
    , async
    , base
    , blaze-html
    , blaze-markup
    , clay
    , containers
    , data-default
    , directory
    , ema                 >=0.2
    , feed
    , filepath
    , lucid
    , lvar
    , monad-logger
    , mtl
    , neat-interpolation
    , pandoc
    , pandoc-types
    , path
    , PyF,
    , relude
    , rib
    , rib-core
    , shake
    , shower
    , tagged
    , text
    , time
    , unliftio
    , with-utf8
    , xml-conduit
    , xml-types
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    ViewPatterns

  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
